--- a/create-svelte-electron-app/tsconfig.json
+++ b/create-svelte-electron-app/tsconfig.json
@@ -2,7 +2,7 @@
   "include": ["src/**/*"],
   "exclude": ["node_modules/*"],
   "compilerOptions": {
-    "module": "commonjs",
+    "target": "esnext",
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
