--- a/create-svelte-electron-app/package.json
+++ b/create-svelte-electron-app/package.json
@@ -25,17 +25,30 @@
     "build": "npm run build:tailwind && rollup -c",
     "dev": "concurrently \"rollup -c -w\" \"npm run watch:tailwind\"",
     "start": "npm run build:tailwind && rollup -c && electron .",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-commonjs": "21.0.2",
     "@rollup/plugin-node-resolve": "13.1.3",
     "@rollup/plugin-typescript": "^8.0.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/svelte": "^3.0.3",
+    "@testing-library/user-event": "^13.5.0",
     "@tsconfig/svelte": "^2.0.0",
+    "@types/jasmine": "^3.10.3",
+    "@types/jest": "^27.4.1",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.21",
     "autoprefixer": "^10.4.2",
+    "babel-jest": "^27.5.1",
+    "babel-plugin-transform-vite-meta-env": "^1.0.3",
     "concurrently": "^7.0.0",
     "electron": "^17.1.0",
     "electron-builder": "^22.14.13",
+    "jest": "^27.5.1",
+    "jest-transform-stub": "^2.0.0",
     "postcss": "^8.4.7",
     "rollup": "2.68.0",
     "rollup-plugin-css-only": "^3.1.0",
@@ -45,14 +58,20 @@
     "sirv-cli": "^2.0.2",
     "svelte": "3.46.4",
     "svelte-check": "^2.0.0",
+    "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^4.0.0",
     "tailwindcss": "^3.0.23",
+    "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
-    "typescript": "^4.0.0",
+    "typescript": "^4.6.2",
     "wait-on": "^6.0.1"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "electron-serve": "^1.1.0",
-    "postcss-cli": "^9.1.0"
+    "g": "^2.0.1",
+    "jasmine": "^4.0.2",
+    "postcss-cli": "^9.1.0",
+    "reflect-metadata": "^0.1.13"
   }
 }
